--- a/frontend/src/css/tokens.scss
+++ b/frontend/src/css/tokens.scss
@@ -12,5 +12,6 @@ $light-primary: #dddddd;
 $light-secondary: #f9f9f9;
 $light-text-primary: #1a1a1a;
 // New Color pallet for dark mode
-$dark-primary: #3a6ee8;
-$dark-secondary: #121212;
+$dark-primary: #1a1a1a;
+$dark-secondary: #343434;
+$dark-text-primary: #f9f9f9;
